--- a/registration.html
+++ b/registration.html
@@ -92,6 +92,14 @@
     </style>
 </head>
 <body>
+
+    <form action="action.php" target="_blank">
+        <input type="submit" value="Submit">
+
+    </form>
+
+
+   
     
 </body>
 </html> 
