Username, Value, and Readonly

--- a/registration.html
+++ b/registration.html
@@ -93,7 +93,8 @@
 </head>
 <body>
 
-    <form action="action.php" target="_blank">
+    <form action="action.php">
+        <input type="text" name="username" value="John Doe" readonly>
         <input type="submit" value="Submit">
 
     </form>
