--- a/registration.html
+++ b/registration.html
@@ -94,7 +94,7 @@
 <body>
 
     <form action="action.php">
-        <input type="text" name="username" value="John Doe" disabled>
+        <input type="text" name="username" value="John Doe" required>
         <input type="submit" value="Submit">
 
     </form>
