--- a/registration.html
+++ b/registration.html
@@ -95,6 +95,7 @@
 
     <form action="action.php">
         <input type="text" name="username" value="John Doe" required>
+        <input type="email" name="username">
         <input type="submit" value="Submit">
 
     </form>
