--- a/registration.html
+++ b/registration.html
@@ -96,6 +96,7 @@
     <form action="action.php">
         <input type="text" name="username" value="John Doe" required>
         <input type="email" name="username">
+        <input type="password" name="password">
         <input type="submit" value="Submit">
 
     </form>
