--- a/registration.html
+++ b/registration.html
@@ -94,10 +94,20 @@
 <body>
 
     <form action="action.php">
+        <! -- Text Field -- >
         <input type="text" name="username" value="John Doe" required>
+
+        <! -- Email Field -- >
         <input type="email" name="username">
+
+        <! -- Password Field -- >
         <input type="password" name="password">
+
+        <! -- Submit Field -- >
         <input type="submit" value="Submit">
+
+        <! -- Number Field -- >
+        <input type="number" name="number">
 
     </form>
 
