--- a/registration.html
+++ b/registration.html
@@ -109,6 +109,10 @@
         <! -- Number Field -- >
         <input type="number" name="number">
 
+        <! -- Hidden Field -- >
+        <input type="hidden" value="abc1234" name="secret">
+
+        
     </form>
 
 
