--- a/registration.html
+++ b/registration.html
@@ -112,7 +112,7 @@
         <! -- Hidden Field -- >
         <input type="hidden" value="abc1234" name="secret">
 
-        
+        <textarea name="address" id="" rows="5"></textarea>
     </form>
 
 
