--- a/registration.html
+++ b/registration.html
@@ -101,7 +101,7 @@
         <input type="email" name="username">
 
         <! -- Password Field -- >
-        <input type="password" name="password">
+        <input type="password" name="password" placeholder="Put your password">
 
         <! -- Submit Field -- >
         <input type="submit" value="Submit">
@@ -113,6 +113,8 @@
         <input type="hidden" value="abc1234" name="secret">
 
         <textarea name="address" id="" rows="5"></textarea>
+
+        
     </form>
 
 
