Minimum and Maximum

--- a/registration.html
+++ b/registration.html
@@ -93,18 +93,17 @@
 </head>
 <body>
 
+    <main>
+        <h1>REGISTRATION</h1>
     <form action="action.php">
         <! -- Text Field -- >
-        <input type="text" name="username" value="John Doe" required>
+        <input type="text" name="username" value="John Doe" required placeholder="What's your name?" maxlength="10" min="3">
 
         <! -- Email Field -- >
-        <input type="email" name="username">
+        <input type="email" name="username" placeholder="Put your email">
 
         <! -- Password Field -- >
         <input type="password" name="password" placeholder="Put your password">
-
-        <! -- Submit Field -- >
-        <input type="submit" value="Submit">
 
         <! -- Number Field -- >
         <input type="number" name="number">
@@ -114,10 +113,12 @@
 
         <textarea name="address" id="" rows="5"></textarea>
 
-        
+        <! -- Submit Field -- >
+        <input type="submit" value="Submit">
+
     </form>
 
-
+</main>
    
     
 </body>
