--- a/registration.html
+++ b/registration.html
@@ -116,9 +116,13 @@
         <input type="date" name="date">
         <input type="datetime-local" name="date local">
 
-
         <! -- Submit Field -- >
-        <input type="submit" value="Submit">
+        <input type="submit" value="Click Submit">
+
+        <input type="button" value="Button">
+
+        <input type="Reset" value="Reset">
+
 
     </form>
 
