--- a/registration.html
+++ b/registration.html
@@ -96,6 +96,8 @@
     <main>
         <h1>REGISTRATION</h1>
     <form action="action.php">
+
+        <!--
         <! -- Text Field -- >
         <input type="text" name="username" value="John Doe" required placeholder="What's your name?" minlength="3" maxlength="10" >
 
@@ -122,6 +124,16 @@
         <input type="button" value="Button">
 
         <input type="Reset" value="Reset">
+
+        -->
+        
+        <input type="checkbox" name="Skills" id="" <label for "Skills">Programming</label>>
+
+        <input type="checkbox" name="Skills" id="" <label for "Skills">Java</label>>
+
+    
+
+
 
 
     </form>
