--- a/registration.html
+++ b/registration.html
@@ -118,8 +118,6 @@
         <input type="date" name="date">
         <input type="datetime-local" name="date local">
 
-        <! -- Submit Field -- >
-        <input type="submit" value="Click Submit">
 
         <input type="button" value="Button">
 
@@ -127,9 +125,18 @@
 
         -->
         
-        <input type="checkbox" name="Skills" id="" <label for "Skills">Programming</label>>
+        <input type="checkbox" name="Skills" id="" value="Programming" <label for "Skills">Programming</label>
+        <input type="checkbox" name="Skills" id=""  value="Java" <label for "Skills">Java</label>
+        <input type="checkbox" name="Skills" id=""  value="Web" checked <label for "Skills">Web</label>
 
-        <input type="checkbox" name="Skills" id="" <label for "Skills">Java</label>>
+        <input type="radio" name="Skills" id="" value="Programming" <label for "Skills">Programming</label>
+        <input type="radio" name="Skills" id=""  value="Java" <label for "Skills">Java</label>
+        <input type="radio" name="Skills" id=""  value="Web" checked <label for "Skills">Web</label>
+
+
+
+        <! -- Submit Field -- >
+        <input type="submit" value="Click Submit">
 
     
 
