--- a/registration.html
+++ b/registration.html
@@ -129,14 +129,18 @@
         <input type="checkbox" name="Skills" id=""  value="Java" <label for "Skills">Java</label>
         <input type="checkbox" name="Skills" id=""  value="Web" checked <label for "Skills">Web</label>
 
+        <div>
         <input type="radio" name="Skills" id="" value="Programming" <label for "Skills">Programming</label>
         <input type="radio" name="Skills" id=""  value="Java" <label for "Skills">Java</label>
         <input type="radio" name="Skills" id=""  value="Web" checked <label for "Skills">Web</label>
+        </div>
+
+        <input type="file" name="file-upload" id="" accept=".jpg,.png,.gif">
 
 
 
         <! -- Submit Field -- >
-        <input type="submit" value="Click Submit">
+        <div><input type="submit" value="Click Submit"></div>
 
     
 
