--- a/registration.html
+++ b/registration.html
@@ -137,6 +137,15 @@
 
         <input type="file" name="file-upload" id="" accept=".jpg,.png,.gif">
 
+        <div><select name="year-level" id="year-level">
+            <option value="">--Select Year Level--</option>
+            <option value="1">First Year</option>
+            <option value="2">Second Year</option>
+            <option value="3">Third Year</option>
+            <option value="4">Fourth Year</option>
+         </select>
+        </div> 
+
 
 
         <! -- Submit Field -- >
